--- a/css/index.css
+++ b/css/index.css
@@ -4641,7 +4641,7 @@ ul li a {
   }
   .home-page2-gambar-section {
     z-index: 5;
-    top: 2081px;
+    top: 2290px;
     left: 0;
     right: 0px;
     width: 100%;
@@ -5594,7 +5594,7 @@ ul li a {
     display: none;
   }
   .mitra-section3 {
-    top: 4304px;
+    top: 4432px;
     left: 0px;
     right: 0px;
     width: 100%;
@@ -5650,7 +5650,7 @@ ul li a {
     position: absolute;
   }
   .mitra-section2 {
-    top: 3000px;
+    top: 3200px;
     left: 0px;
     right: 0px;
     width: 100%;
@@ -6754,7 +6754,7 @@ ul li a {
   }
   .home-page2-gambar-section {
     z-index: 5;
-    top: 162%;
+    top: 3;
     left: 0;
     right: 0px;
     width: 100%;
