--- a/css/login.css
+++ b/css/login.css
@@ -155,7 +155,7 @@ a {
   transition: color 0.3s;
 }
 a:hover {
-  background-color: #7d0101;
+  background-color: #3131314a;
   padding: 5px 7px 5px 7px;
   /* margin: 5px; */
   border-radius: 5px;
@@ -584,7 +584,7 @@ button:hover {
     transition: color 0.3s;
   }
   a:hover {
-    background-color: #7d0101;
+    background-color: #3131314a;
     padding: 5px 7px 5px 7px;
     /* margin: 5px; */
     border-radius: 5px;
@@ -1032,7 +1032,7 @@ button:hover {
     transition: color 0.3s;
   }
   a:hover {
-    background-color: #7d0101;
+    background-color: #3131314a;
     padding: 5px 7px 5px 7px;
     /* margin: 5px; */
     border-radius: 5px;
@@ -1406,7 +1406,7 @@ button:hover {
     position: fixed;
     box-shadow: 5px 5px 10px 0px rgba(0, 0, 0, 0.5);
     align-items: flex-start;
-    background-color: #d8d5d5;
+    background-color: #f10000;
   }
   /* bentuk navibar akhir */
   /* ---------------------------------------------------------------------------------------- */
@@ -1471,10 +1471,11 @@ button:hover {
     transition: color 0.3s;
   }
   a:hover {
-    background-color: #7d0101;
-    padding: 5px 7px 5px 7px;
+    background-color: #3131314a;
+    padding: 4px 12px 4px 17px;
     /* margin: 5px; */
     border-radius: 5px;
+    margin-left: -4px;
   }
 
   .Page-scroll {
